<resources>
    <string name="app_name">TraidingViewer</string>
    <string name="one_day">D</string>
    <string name="one_week">W</string>
    <string name="one_month">M</string>
    <string name="six_month">6M</string>
    <string name="one_year">1Y</string>
    <string name="all">All</string>
    <string name="find_company_or_ticker">Find company or ticker</string>
    <string name="price_">%1$s (%2$s%%)</string>
    <string name="popular_requests">Popular requests</string>
    <string name="you_have_searched_for_this">You’ve searched for this</string>
    <string name="nothing_found">Nothing found</string>
    <string name="usd_">$%s</string>

    <string name="error_limit_exceeded">Requests limit exceeded. Try later</string>
    <string name="error_unknown_host">No internet connection</string>
    <string name="error_some_error">Unknown error. Try reload app</string>
    <string name="nothing_to_show_add_tickers_to_favorites_for_easier_access">Nothing to show.\nAdd tickers to Favorites for easier access</string>
</resources>