<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tickerInfoButtonsLayout"
        android:paddingTop="40dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:id="@+id/tickerInfoButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonD"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/one_day" />

        <TextView
            android:id="@+id/buttonW"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/one_week" />

        <TextView
            android:id="@+id/buttonM"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/one_month" />

        <TextView
            android:id="@+id/button6m"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@string/six_month" />

        <TextView
            android:id="@+id/button1y"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@string/one_year" />

        <TextView
            android:id="@+id/buttonAll"
            style="@style/chartButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rounded_corner"
            android:gravity="center"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@string/all" />

    </LinearLayout>

</RelativeLayout>
