<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="3dp"
        app:strokeColor="@color/colorBlack"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/searchBackButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="13dp"
                android:layout_weight="1"
                android:contentDescription="@string/find_company_or_ticker"
                android:src="@drawable/ic_back" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="13dp"
                android:layout_weight="10"
                android:autofillHints=""
                android:background="@color/white"
                android:inputType="text"
                android:textCursorDrawable="@null"
                tools:ignore="LabelFor" />

            <ProgressBar
                android:id="@+id/searchProgressBar"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:indeterminateTint="@color/colorGray"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/searchPreviewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/searchFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/popular_requests" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            tools:itemCount="3" />

        <TextView
            android:id="@+id/searchedItemsTitle"
            style="@style/searchFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/you_have_searched_for_this"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            tools:itemCount="3" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        android:visibility="gone"
        tools:itemCount="3"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/nothingShowText"
        style="@style/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/nothing_found"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>